:bug: Fixed a number of issues in the Yubikey class :art: Remove dependancy of config from Yubikey class :art: Change provider to set config values :rainbow: Add https, verify_https and user agent to config :art: Change namespace :art: Change composer.json package description and minimum php version

--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,41 @@
 {
-    "name": "bitbeans/yubikey",
-    "description": "Yubikey for Laravel 5",
-    "keywords": ["yubikey", "laravel", "laravel5"],
-    "license": "MIT",
-    "version": "1.0.0",
-    "authors": [
-        {
-            "name": "Jonathan Thuau",
-            "email": "jonathan@monarobase.net",
-            "homepage": "http://monarobase.net",
-            "role": "Developer"
-        },
-        {
-            "name": "Christian Hermann",
-            "email": "c.hermann@bitbeans.de",
-            "homepage": "https://github.com/bitbeans",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0",        
-        "illuminate/support": "~5"
+  "name": "rapide/yubikey",
+  "description": "Yubikey for Laravel 5",
+  "keywords": [
+    "yubikey",
+    "laravel",
+    "laravel5"
+  ],
+  "license": "MIT",
+  "version": "0.1.0",
+  "authors": [
+    {
+      "name": "Lucas van der Have",
+      "email": "lucas@rapide.software",
+      "homepage": "https://rapide.nl",
+      "role": "Developer"
     },
-    "autoload": {
-        "psr-4": {
-            "Bitbeans\\Yubikey\\": "src/"
-        }
+    {
+      "name": "Jonathan Thuau",
+      "email": "jonathan@monarobase.net",
+      "homepage": "http://monarobase.net",
+      "role": "Developer"
     },
-    "minimum-stability": "dev"
+    {
+      "name": "Christian Hermann",
+      "email": "c.hermann@bitbeans.de",
+      "homepage": "https://github.com/bitbeans",
+      "role": "Developer"
+    }
+  ],
+  "require": {
+    "php": ">=7.0.0",
+    "illuminate/support": "~5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Rapide\\Yubikey\\": "src/"
+    }
+  },
+  "minimum-stability": "dev"
 }
