--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "laravel"
   ],
   "license": "MIT",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "authors": [
     {
       "name": "Lucas van der Have",
@@ -29,12 +29,19 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "illuminate/support": "^6.0.0"
+    "illuminate/support": "^8.0"
   },
   "autoload": {
     "psr-4": {
       "Rapide\\Yubikey\\": "src/"
     }
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Rapide\\Yubikey\\YubikeyServiceProvider"
+      ]
+    }
+  }
 }
