--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "laravel"
   ],
   "license": "MIT",
-  "version": "2.0.0",
   "authors": [
     {
       "name": "Lucas van der Have",
@@ -29,7 +28,7 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "illuminate/support": "^8.0"
+    "illuminate/support": "^6.0 || ^7.0 || ^8.0"
   },
   "autoload": {
     "psr-4": {
