--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0",
-    "illuminate/support": "^6.0 || ^7.0 || ^8.0"
+    "php": ">=8.0",
+    "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0"
   },
   "autoload": {
     "psr-4": {
