--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "rapide/yubikey",
   "description": "Yubikey for Laravel",
+  "version": "4.0.0",
   "keywords": [
     "yubikey",
     "laravel"
@@ -27,15 +28,14 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
-    "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0"
+    "php": "^8.2",
+    "illuminate/support": "^10.0 || ^11.0 || ^12.0"
   },
   "autoload": {
     "psr-4": {
       "Rapide\\Yubikey\\": "src/"
     }
   },
-  "minimum-stability": "dev",
   "extra": {
     "laravel": {
       "providers": [
